2001-11-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFontManager.m
	Reorganised the handling of the font enumerator. New
	[_includeFont:] is only called from here. Corrected
	[availableMembersOfFontFamily:] and [fontNamed:hasTraits:].
	* Headers/gnustep/gui/GSFontInfo.h: 
	Adopted GSFontEnumerator to changes on NSFontManager.
	* Source/GSFontInfo.m: 
	Changed GSFontEnumerator so that only [enumerateFontsAndFamilies]
	must be subclassed.
	
2001-11-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTabView.m
	In [selectTabViewItem:] corrected setting the first responder of
	the tab view. 
	
2001-11-09  Adam Fedor  <fedor@gnu.org>

	* Source/NSView.m (-addSubview:): Raise exception on adding nil
	subview or superview of view.
	(-addSubview:positioned:relativeTo:): Likewise.
	(-beginDocument): Change NSLog to exception.

Thu Nov  8 23:30:47 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSMatrix.m ([-sizeToFit]): Reverted last change.
	* Source/NSBrowser.m ([-_performLoadOfColumn:]): Do not call
	sizeToFit on the matrix, just set the cellSize to the result of
	calling -cellSize on the first browsercell in the matrix.
	
2001-11-08  Adam Fedor  <fedor@gnu.org>

	* Simple printing/pagination implementation
	* Headers/gnustep/gui/NSGraphicsContext.h: Add some constants
	* Source/NSFont.m (+useFont:): Same font name in static NSSet
	(+resetUsedFonts): Implement
	(+usedFonts): Likewise.
	* Source/NSGraphicsContext.m (+defaultContextWithInfo:) Depreciated,
	calls +graphicsContextWithAttributes:.
	(+graphicsContextWithAttributes:): Creates default context class.
	(+useFont:): Removed.
	* Source/NSPrintInfo.m (-setOrienatation:) Set paper size accordingly.
	(-setPaperName:): Likewise.
	(-setPaperSize:): Set orientation.
	(+initPrintInfoDefaults): Rewrite.
	* Source/NSPrintOperation.m (-_setupPrintInfo): New private.
	(-_printPaginateWithInfo:knowsRange:): Likewise.
	(-_rectForPage:info:): Likewise.
	(-_adjustPagesFirst:last:info:): Likewise.